# mytee

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: args.h  file_utils.h  signal_handler.h  structs.h  tee.h  thread_utils.h
src/: args.c  file_utils.c  main.c  signal_handler.c  tee.c  thread_utils.c
tests/: integration-tests.c  test_tee.c  unit-tests.c
